syntax = "proto3";

package app;

service HelloService {
    rpc GetHello(GetHelloRequest) returns (GetHelloResponse) {}
}

message GetHelloRequest {

}

message GetHelloResponse {
    string message = 1;
}